# groundtruth

./: .gitattributes  .gitignore  .gitpod.yml  .mcp.json  .tmp_predictions.jsonl  10_TASK_PROBE_REPORT.md  ARCHITECTURE_CONFORMANCE.md  AUDIT_MAP.md  BASELINE_DEEPSEEKV4_RESULT.md  BENCHMARK_RUNBOOK.md  BENCHMARK_SETUP_PLAN_20260603.md  BRANCH_PLAN.md  BRIEFING.md  CHANGELOG.md  CLAUDE.md  CURSOR_START.md  DECISION_IMPLEMENTATION_MATRIX.md  DEEPSWE_GT_CONFORMANCE_AUDIT_20260609.md  DOC_OF_HONOR.md  Dockerfile  Dockerfile.swebench  EMBEDDER_USAGE_REPORT.md  FAILURE_ANALYSIS.md  FINAL_ARCH_VALIDATION.md  FINDINGS.md  GITPOD_LIVE_RUN.md  GO_NO_GO.md  GO_NO_GO_DEEPSWE.md  GO_NO_GO_LANGUAGE_AGNOSTIC.md  GO_NO_GO_TRIALS.md  GRAPH_HANDOFF_REPORT.md  GT_AIM.md  GT_CHECK_ANALYSIS.md  GT_DEEPSWE_LSP_FIXES_20260602.md  GT_GT_FIX_EVERYTHING_BRIEF_20260607T0748Z.md  GT_INSPECT_HANDOFF.md  GT_PRODUCT_ASSESSMENT.md  GT_V5_SMOKE_TEST_ANALYSIS.md  GT_V6_SMOKE_TEST_ANALYSIS.md  HANDOFF_20260531.md  (+64 more)
.claude/: CLAUDE.md  PROMPT_gt_output_correctness_audit_20260531T1731Z.md  SESSION_SUMMARY_20260601.md
.gitpod/: check_edges.py  debug_rust_import.sh  diag_all_langs.py  goal2_lsp_smoke.sh  show_go_edges.py  test_lsp_manual.py
.tmp_gt_architecture_audit/: ARCHITECTURE_CLAIM_LEDGER.jsonl  DEEPSWE_5LANG_SMOKE_REPORT.md  ENVIRONMENT_AND_SOURCE.md  HARDCODED_NUMBERS.md  HARDCODED_NUMBERS_REMEDIATION.md  NEXT_SESSION_HANDOFF.md  PRODUCER_RUNTIME_SMOKE.md
Memory/: Starting chat.txt
artifact_deepswe/: DRY_RUN.md  INTEGRATION_MAP.md  MINI_SWE_AGENT_MAP.md  READINESS_AUDIT.md  TODO_DEEPSWE.md  audit_results.json  gt_agent.py  gt_core_audit.json  gt_env.py  gt_mini_patch.py
artifact_verified/: README.md  gt_verified_agent.py  verified_deep_metrics.py  verified_gt.yaml
artifacts/: classifications.json
benchmarks/: README.md  _fixtures.py  runner.py  swebench_verified_500_ids.json
config/: gt_track4.yaml
configs/: cal_a_gemini_3_1_pro_fixed.yaml
docker/: Dockerfile.gt-substrate  README.md  fetch-python.sh  gt-substrate-run.sh
docs/: API.md  ARCHITECTURE.md  CANARY_VERIFY.md  CHANGELOG_20260601.md  CONTRACT_DELTA_ACCEPTANCE_LOCKED_20260605.md  CONTRACT_DELTA_L3_DESIGN_20260605.md  DEEPSWE_GT_GHA_SETUP_LESSONS.md  DEEPSWE_GT_MULTILANGUAGE_MATRIX.md  DEEPSWE_GT_PIPELINE_AUDIT.md  DEEPSWE_GT_STAGE_PLAN.md  DRIFT_CODESPACE_RUNBOOK_20260605.md  GRAPH_DEPTH_PARITY_TARGET_20260609.md  GT_5LANG_LIPI_FIXES_20260602.md  GT_AB_5SMOKE_FULL_UTILIZATION_SPEC_2026-04.md  GT_CLAUDE_CODE_ANALYSIS.md  GT_INTEGRATION_DIAGNOSIS_2026-04.md  GT_LANGUAGE_AGNOSTIC_DOCKER_AUDIT.md  GT_MINI_SWE_INTEGRATION.md  GT_STRUCTURAL_DEEP_DIVE.md  GT_TRUE_ARCHITECTURE.md  HANDOFF_GEN_EVAL_GITHUB_ACTIONS.md  LIPI.md  LSP_PROGRESS.md  LSP_PROGRESS_ANALYSIS_2026-04.md  MINISWE_CONTRACT_DELTA_HANDOFF_20260605.md  MINISWE_CONTRACT_DRIFT_INTEGRATION_20260605.md  MINISWE_GT_INTEGRATION_AUDIT_20260609.md  MINI_SWE_5LANG_SESSION_20260602.md  RESEARCH_ARTIFACT_SPEC_20260610.md  SWE_AGENT_DEEPSEEK_BASELINE_REPAIR_SPEC_2026-04.md  SWE_LIVE_LITE_OH_GT_INTEGRATION_HANDOFF.md  TASK_REGISTRY.md  V104_DEEP_ANALYSIS.md  V104_TASK_FLIP_ANALYSIS.md  V104_V2_RUN_DEEP_ANALYSIS.md  V104_V3_RUN_ANALYSIS.md  V6_SMOKE_MILESTONE.md  WHOLE_GT_REVIEW_20260602.md  branch-workflow.md  hallucination-taxonomy.md  (+3 more)
gt-index/: ASSERTION_FIX.md
railway/: .railwayignore  DEPLOY.md  Dockerfile  codespace_run.sh  config.toml  entrypoint.sh  gitpod_deepswe_run.sh  gitpod_run.sh  gitpod_watch.sh  gt_trial_task.sh  railway.json  run_one_task.py  verify_miniswe_closure.sh
scripts/: __init__.py  analyze_v2_run.py  audit_l2_localization.py  check_boundary.py  compute_canary_metrics.py  cursor_rerun_tables.py  deep_metrics.py  deepswe_aggregate.py  deepswe_parse_result.py  eval_acceptance.py  full_architecture_audit.py  graph_quality_metrics.py  gt_autopsy.py  localization_metrics.py  log_relay.py  log_sink.py  make_cal20_manifest.py  mine_feasibility_tranche.py  preflight_checks.py  save_gha_run.sh  setup_models.py
sdk/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
sdk/src/groundtruth/: __init__.py  _schema.py  core.py  exceptions.py  filters.py  formatters.py  graph.py  models.py
sdk/src/groundtruth/cli/: __init__.py  __main__.py  main.py
sdk/src/groundtruth/integrations/: __init__.py  crewai.py  langchain.py  openai.py
sdk/src/groundtruth/mcp/: __init__.py  server.py
sdk/tests/: conftest.py  test_cli_and_mcp.py  test_core.py  test_crewai_optional.py  test_exceptions.py  test_filters.py  test_formatters.py  test_graph.py  test_openai_and_langchain.py  test_schema.py
sdk/tests/integration/: test_dogfood.py
task_ledgers/: README.md  abs-module-cache-flags.md  aiogram-1594.md  amoffat__sh-744.md  arktype-json-schema-refs-dependencies.md  arviz-2413.md  astropy__astropy-12907.md  (+38 more)
(+1310 files in other folders)
