[project]
name = "groundtruth-mcp"
version = "0.1.0"
description = "MCP server — compiler-grade codebase intelligence for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "lsp", "code-intelligence", "ai-agents", "codebase-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/harneet2512/groundtruth"
Repository = "https://github.com/harneet2512/groundtruth"
Issues = "https://github.com/harneet2512/groundtruth/issues"

[project.optional-dependencies]
ai = ["anthropic>=0.30.0"]
gitignore = ["pathspec>=0.12.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "coverage>=7.0.0",
    "pathspec>=0.12.0",
]
parsing = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
]
search = [
    "sqlite-vec>=0.1.0",
]
watch = [
    "watchdog>=4.0.0",
]
benchmark = [
    "openai>=1.0.0",
    "anyio>=4.0.0",
    "datasets>=2.0.0",
    "swebench>=2.0.0",
]

[project.scripts]
groundtruth = "groundtruth.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/groundtruth"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
